--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -1,14 +1,14 @@
 modLoader="javafml"
 loaderVersion="*"
 license="All rights reserved"
-issueTrackerURL="https://github.com/ricksouth/serilum-mc-mods/labels/Mod:%20Passive%20Endermen"
+issueTrackerURL="https://github.com/Serilum/.issue-tracker/labels/Mod:%20Passive%20Endermen"
 logoFile="icon.png"
 
 [[mods]]
 modId="passiveendermen"
-version="4.4"
+version="4.5"
 displayName="Passive Endermen"
-displayURL="https://curseforge.com/minecraft/mc-mods/passive-endermen"
+displayURL="https://serilum.com/mod/passive-endermen"
 authors="Rick South"
 description='''Configurably prevent an enderman from picking up blocks, griefing and attacking players.
 '''
@@ -21,13 +21,15 @@ If you would like to contribute too, check out https://ricksouth.com/donate. App
 
 [[dependencies.passiveendermen]]
     modId="collective"
+    type="required"
     mandatory=true
-    versionRange="[7.5,)"
+    versionRange="[7.21,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.passiveendermen]]
     modId="minecraft"
+    type="required"
     mandatory=true
     versionRange="[1.20.2]"
     ordering="NONE"
