--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ logoFile="icon.png"
 
 [[mods]]
 modId="passiveendermen"
-version="4.5"
+version="4.6"
 displayName="Passive Endermen"
 displayURL="https://serilum.com/mod/passive-endermen"
 authors="Rick South"
@@ -23,7 +23,7 @@ If you would like to contribute too, check out https://ricksouth.com/donate. App
     modId="collective"
     type="required"
     mandatory=true
-    versionRange="[7.21,)"
+    versionRange="[7.26,)"
     ordering="NONE"
     side="BOTH"
 
@@ -36,4 +36,4 @@ If you would like to contribute too, check out https://ricksouth.com/donate. App
     side="BOTH"
 
 [[mixins]]
-    config = "passiveendermen_neoforge.mixins.json"
+    config = "passiveendermen.mixins.json"
