--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ logoFile="icon.png"
 
 [[mods]]
 modId="passiveendermen"
-version="4.6"
+version="4.7"
 displayName="Passive Endermen"
 displayURL="https://serilum.com/mod/passive-endermen"
 authors="Rick South"
@@ -14,7 +14,7 @@ description='''Configurably prevent an enderman from picking up blocks, griefing
 '''
 credits='''Thank you very much to my Membership sponsors for supporting the development of this mod:  
 
-Alister, Andrean Olgo, aternosorg, BirdieMiner, Cherriesaurus, Jeremy Langford, Michael W. S., Rare Students, Shana Gitnick, Tyler Behl   
+Alister, Andrean Olgo, aternosorg, BirdieMiner, Cherriesaurus, Michael W. S., Shana Gitnick, Sukhmai, Tyler Behl   
 
 If you would like to contribute too, check out https://serilum.com/donate. Appreciate it! <3   
 '''
@@ -22,7 +22,7 @@ If you would like to contribute too, check out https://serilum.com/donate. Appre
 [[dependencies.passiveendermen]]
     modId="collective"
     mandatory=true
-    versionRange="[7.61,)"
+    versionRange="[7.67,)"
     ordering="NONE"
     side="BOTH"
 
